[UPDATE]Development Standards